--- a/authors.yaml
+++ b/authors.yaml
@@ -1,6 +1,6 @@
 - name: "Tsemach Gozlan"
   mcgill_id: "260987791"
-  email: "email@mail.mcgill.ca"
+  email: "tsemachgozlan@mail.mcgill.ca"
   
 - name: "Adam Friedman"
   mcgill_id: "261019811"
